# codethoughts.io

./: .disabled.travis.yml  .ghci  .gitignore  .pages.yml  .pre-commit-config.yaml  .sass-lint.yml  .travis.yaml  .travis.yml  LICENSE  README.md  TODO.md  about.markdown  app.css  app.css.map  bun.lockb  codetalk-io.cabal  codetalk.code-workspace  config.toml  contact.markdown  deploy.sh  deploy_rsa.enc  devenv.nix  justfile  package.json  project.code-workspace  rust-project.json.bak  site.hs  stack.yaml  tailwind.config.ts
.devcontainer/: Dockerfile  devcontainer.json  update.sh
.github/workflows/: cache-cron.yml  cd.yml  ci-binary.yml  ci-cd.yml  ci.yml  codeql.yml  cron-cache-deps.yml
_dist/: search_index.en.js
content/: _index.md
content/blog/: _index.md  fifth.md  third.md
content/drafts/: 2022-01-01-api-migration-and-modernization.md  2022-01-01-your-aws-bill-tells-a-story.md  2023-01-01-the-stack.md  2023-10-17-the-stack-part-4.md  _index.md  draft-third.md
content/home/: interesting-projects.json
content/importable-posts/: 2023-10-16-the-stack-part-3.md  _index.md
content/pages/: _index.md  about.md  archive.md  og-image.md
content/posts/: 2014-01-31-what-is-this-about.md  2014-02-13-deploying-with-vagrant.md  2015-11-18-setting-up-unrealircd-and-anope-on-ec2.md  (+14 more)
css/: _archives.scss  _articles.scss  _fonts.scss  _page.scss  _single-article.scss  main.css  main.css.map  main.scss
drafts/: 2022-01-01-api-migration-and-modernization.md  2022-01-01-your-aws-bill-tells-a-story.md  2023-10-17-the-stack-part-4.md
importable/: 2023-10-07-the-stack-part-1.md  2023-10-07-the-stack-part-2.md  2023-10-16-the-stack-part-3.md  2024-06-24-setting-up-uniffi-for-ios-simulators-and-watchos.md  2024-06-24-using-capacitor-plugins-from-rust-wasm.md  2024-06-25-mobile-a-different-way.md
js/: articles.js
legacy/: .stylish-haskell.yaml  LICENSE  README.md
posts/: 2014-01-31-what-is-this-about.md  2014-02-13-deploying-with-vagrant.md  2014-09-24-local-notifications-from-irssi-on-a-remote-server.html  2014-09-24-local-notifications-from-irssi-on-a-remote-server.md  2014-09-25-irssi-notifications-on-ios-and-android.html  2014-09-25-irssi-notifications-on-ios-and-android.md  2015-11-18-s3-bucket-specific-policy.md  2015-11-18-setting-up-unrealircd-and-anope-on-ec2.md  2015-11-28-briefly-on-the-purpose-of-functors-applicatives-and-monads.md  2016-05-10-compiling-scss-and-js-in-hakyll.md  2016-05-10-pagination-and-tags-with-hakyll.not-ready  2016-05-10-using-electron-with-haskell.not-ready  2016-05-11-using-electron-with-haskell.md  2018-02-07-Mobile-Haskell.md  2020-03-19-Live-Migration-of-DynamoDB-Tables.md  2020-03-20-Visual-Studio-Code-on-iPad.md  2020-04-05-common-json-patterns-in-haskell-rust-and-javascript.md  2023-01-29-the-stack.md  2023-10-07-the-stack-part-1.md  2023-10-07-the-stack-part-2.md  2023-10-14-the-stack-part-3.md  2023-10-16-the-stack-part-3.md  2024-06-24-setting-up-uniffi-for-ios-simulators-and-watchos.md  2024-06-24-using-capacitor-plugins-from-rust-wasm.md  2024-06-25-mobile-a-different-way.md  2024-06-26-how-i-structure-my-work-as-a-solor-founder.md
posts-draft/: 2022-??-??-api-migration-and-modernization.md  2022-??-??-your-aws-bill-tells-a-story.md  2023-10-17-the-stack-part-4.md  2023-??-??-the-stack.md
resources/code/common-json-patterns/rust-serde/: Cargo.toml
resources/code/common-json-patterns/rust-serde/src/: house.rs  main.rs
resources/code/serverless-rust/: .gitignore  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json
resources/code/serverless-rust/src/: global.rs  graphql.rs  handler.rs  lib.rs  main.rs
resources/code/serverless-rust/tests/: main_test.rs
scss/: _archives.scss  _articles.scss  _base.scss  _fonts.scss  _media.scss  _normalize.scss  _page.scss  _sidebar.scss  _single-article.scss  app.scss
src/: Main.hs  ParseBookmarks.hs
styles/: input.css
templates/: 404.html  anchor-link.html  archive.html  base.html  blog-page.html  blog.html  content-about-page.html  content-archive-page.html  content-og-image.html  content-page.html  default.html  disqus.html  drafts-post-page.html  frontpage.html  home.html  importable-post-page.html  index.html  page.html  post-listing.html  post-page.html  post.html  posts.html  sitemap.xml  taxonomy_list.html  taxonomy_single.html  utterances.html
tools/: README.md  bun.lockb  codeblock.ts  index.ts  package.json
(+138 files in other folders)
