name:                codetalk-io
version:             1.2.0
synopsis:            Hakyll website for the codetalk.io blog
description:         Please see README.md
homepage:            https://github.com/codetalkio/codetalk.io#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Kjær Laustsen
maintainer:          ckl@codetalk.io
copyright:           codetalk
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hakyll
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base == 4.*
                     , hakyll == 4.9.*
                     , hjsmin == 0.2.*
                     , text == 1.2.*
                     , bytestring == 0.10.*
                     , aeson == 1.1.*
                     , hxt == 9.3.*
                     , HandsomeSoup == 0.4.*
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/codetalkio/codetalk.io
