name:                codetalk-io
version:             1.3.0
synopsis:            The codetalk.io blog, generated using Hakyll
description:         Please see README.md
homepage:            https://github.com/codetalkio/codetalk.io#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Kjær Laustsen
maintainer:          ckl@codetalk.io
copyright:           codetalk
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hakyll-site
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  other-modules:       Site.Compiler
                     , Site.Context
  build-depends:       base
                     , hakyll
                     , text
                     , bytestring
                     , aeson
                     , hakyll-shakespeare
                     , hxt
                     , HandsomeSoup
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/codetalkio/codetalk.io
