[package]
name = "rust_serde"
version = "0.1.0"
authors = ["Christian Kjaer Laustsen <ckl@codetalk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
